--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,22 @@
       <button id="request-demo-btn" class="button-m">Request a demo</button>
     </div>
   </header>
+
+  <section class="section=hero">
+    <div id="hero-content">
+      <h1 class="title-1">Web & Mobile Design Development</h1>
+
+      <p class="text-2">Helps you to organize your income and expenses</p>
+
+      <div>
+        <button>Try free demo</button>
+        <span class="text-3">- Web, iOS and Android</span>
+      </div>
+    </div>
+
+    <div id="hero-image">
+      <img src="./images/hero.png" alt="Hero image">
+    </div>
+  </section>
 </body>
 </html>
