Styled hero section

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/b20fa11caf.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="./styles/shared/header.css">
   <title>PJ Studio</title>
@@ -36,20 +37,20 @@
     </div>
   </header>
 
-  <section class="section=hero">
+  <section class="section-hero">
     <div id="hero-content">
-      <h1 class="title-1">Web & Mobile Design Development</h1>
+      <h1 class="title-1 hero-title">Web & Mobile Design Development</h1>
 
-      <p class="text-2">Helps you to organize your income and expenses</p>
+      <p class="text-2 hero-text">Helps you to organize your income and expenses</p>
 
-      <div>
-        <button>Try free demo</button>
-        <span class="text-3">- Web, iOS and Android</span>
+      <div id="hero-btn-container">
+        <button class="button-l">Try free demo<i class="fa-solid fa-chevron-down"></i></button>
+        <span class="text-2" id="hero-btn-container__text">- Web, iOS and Android</span>
       </div>
     </div>
 
-    <div id="hero-image">
-      <img src="./images/hero.png" alt="Hero image">
+    <div id="hero-image-container">
+      <img src="./images/hero.png" id="hero-image" alt="Hero image">
     </div>
   </section>
 </body>
