Refactored button styles

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     </nav>
 
     <div>
-      <button id="request-demo-btn" class="button-m">Request a demo</button>
+      <button id="request-demo-btn" class="button-m button-style">Request a demo</button>
     </div>
   </header>
 
@@ -44,7 +44,7 @@
       <p class="text-2 hero-text">Helps you to organize your income and expenses</p>
 
       <div id="hero-btn-container">
-        <button class="button-l">Try free demo<i class="fa-solid fa-chevron-down"></i></button>
+        <button class="button-l button-style">Try free demo<i class="fa-solid fa-chevron-down"></i></button>
         <span class="text-2" id="hero-btn-container__text">- Web, iOS and Android</span>
       </div>
     </div>
