Styled mobile app section

--- a/public/index.html
+++ b/public/index.html
@@ -72,15 +72,15 @@
       </div>
     </section>
 
-    <section class="section-our-process">
+    <section class="section-our-process section-style">
       <div class="section-container">
         <div class="section-our-process__title">
-          <h2 class="title-2">Our Process</h2>
+          <h2 class="title-2-800">Our Process</h2>
           <p class="text-color-1">Helps you to organize your income and expenses</p>
         </div>
 
         <div class="feature-card">
-          <div class="icon-box icon-box-bg-yello">
+          <div class="icon-box-l icon-box-bg-yello">
             <i class="fa-solid fa-book-open-reader"></i>
           </div>
 
@@ -90,7 +90,7 @@
         </div>
 
         <div class="feature-card">
-          <div class="icon-box icon-box-bg-celtic-blue">
+          <div class="icon-box-l icon-box-bg-celtic-blue">
             <i class="fa-solid fa-shield"></i>
           </div>
 
@@ -100,7 +100,7 @@
         </div>
 
         <div class="feature-card">
-          <div class="icon-box icon-box-bg-tomato">
+          <div class="icon-box-l icon-box-bg-tomato">
             <i class="fa-solid fa-user-check"></i>
           </div>
 
@@ -110,7 +110,7 @@
         </div>
 
         <div class="feature-card">
-          <div class="icon-box icon-box-bg-green">
+          <div class="icon-box-l icon-box-bg-green">
             <i class="fa-solid fa-circle-check"></i>
           </div>
 
@@ -119,6 +119,45 @@
           <p class="text-1 text-color-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         </div>
       </div>
+    </section>
+
+    <section class="section-mobile-app section-style">
+      <div class="section-mobile-app__container">
+        <div class="image-cotainer mobile-app-image">
+          <img src="./images/app3.png" alt="Mobile app image">
+        </div>
+
+        <div class="mobile-app-content content-container">
+          <p class="text-3 text-color-1">FEATURES</p>
+
+          <h2 class="title-2-700 mobile-app-title">Mobile App</h2>
+
+          <p class="text-2 text-color-1 mobile-app-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+            quis nostrud exercitation ullamco.
+          </p>
+
+          <div class="mobile-app-features">
+            <div class="mobile-app-feature">
+              <div class="icon-box-m icon-box-bg-greenp">
+                <i class="fa-solid fa-compass-drafting"></i>
+              </div>
+
+              <h5 class="title-5">UI/UX File</h5>
+            </div>
+
+            <div class="mobile-app-feature">
+              <div class="icon-box-m icon-box-bg-green">
+                <i class="fa-solid fa-file-lines"></i>
+              </div>
+
+              <h5 class="title-5">Documents</h5>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      
     </section>
   </body>
 </html>
