Styled offers section

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" href="./images/pj-logo2.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -68,11 +69,11 @@
       </div>
 
       <div id="hero-image-container">
-        <img src="./images/hero.png" id="hero-image" alt="Hero image"/>
+        <img src="./images/p2.jpg" id="hero-image" alt="Hero image"/>
       </div>
     </section>
 
-    <section class="section-our-process section-style">
+    <section class="section-our-process section-style-magnolia">
       <div class="section-container">
         <div class="section-our-process__title">
           <h2 class="title-2-800">Our Process</h2>
@@ -81,7 +82,7 @@
 
         <div class="feature-card">
           <div class="icon-box-l icon-box-bg-yello">
-            <i class="fa-solid fa-book-open-reader"></i>
+            <i class="fa-solid fa-door-open"></i>
           </div>
 
           <h4 class="title-4">Daily Standup</h4>
@@ -121,7 +122,7 @@
       </div>
     </section>
 
-    <section class="section-mobile-app section-style">
+    <section class="section-mobile-app section-style-magnolia">
       <div class="section-mobile-app__container">
         <div class="image-cotainer mobile-app-image">
           <img src="./images/app3.png" alt="Mobile app image">
@@ -158,6 +159,42 @@
         </div>
       </div>
       
+    </section>
+
+    <section class="section-offers section-style-white">
+      <h3 class="offer-title title-3 weight-600">Customize Offers</h3>
+
+      <div class="section-offers__content">
+        <div>
+          <img src="./images/p1.jpg" class="image-cotainer-s" alt="">
+        </div>
+
+        <div class="offers-container">
+          <div class="Rectangle-card border-left-tomato">
+            <h4 class="offer__title title-4 weight-500">Custom CMS</h4>
+
+            <p class="Rectangle-card__info text-2 text-color-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore.
+            </p>
+          </div>
+
+          <div class="Rectangle-card border-left-celtic">
+            <h4 class="offer__title title-4 weight-500">Payment Processing</h4>
+
+            <p class="Rectangle-card__info text-2 text-color-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore.
+            </p>
+          </div>
+
+          <div class="Rectangle-card border-left-green">
+            <h4 class="offer__title title-4 weight-500">App Store Submission</h4>
+
+            <p class="Rectangle-card__info text-2 text-color-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
