Styled web development section

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" href="./images/pj-logo2.png">
+    <link rel="icon" href="./images/pj-logo4.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -122,18 +122,18 @@
       </div>
     </section>
 
-    <section class="section-mobile-app section-style-magnolia">
-      <div class="section-mobile-app__container">
+    <section class="section-features section-style-magnolia">
+      <div class="section-features__container">
         <div class="image-cotainer mobile-app-image">
           <img src="./images/app3.png" alt="Mobile app image">
         </div>
 
-        <div class="mobile-app-content content-container">
+        <div class="features-content content-container">
           <p class="text-3 text-color-1">FEATURES</p>
 
-          <h2 class="title-2-700 mobile-app-title">Mobile App</h2>
+          <h2 class="title-2-700 features-title">Mobile App</h2>
 
-          <p class="text-2 text-color-1 mobile-app-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          <p class="text-2 text-color-1 features-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
             quis nostrud exercitation ullamco.
           </p>
@@ -196,5 +196,46 @@
         </div>
       </div>
     </section>
+
+    <section class="section-features section-style-magnolia">
+      <div class="section-features__container">
+        <div class="features-content content-container">
+          <p class="text-3 text-color-1">FEATURES</p>
+
+          <h2 class="title-2-700 features-title">Web Development</h2>
+
+          <p class="text-2 text-color-1 features-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+            quis nostrud exercitation ullamco.
+          </p>
+
+          <div class="mobile-app-features">
+            <div class="mobile-app-feature">
+              <div class="icon-box-m icon-box-bg-greenp">
+                <i class="fa-solid fa-compass-drafting"></i>
+              </div>
+
+              <h5 class="title-5">UI/UX Design</h5>
+            </div>
+
+            <div class="mobile-app-feature">
+              <div class="icon-box-m icon-box-bg-r-blue">
+                <i class="fa-brands fa-react"></i>
+              </div>
+
+              <h5 class="title-5">React & Vue JS</h5>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="image-cotainer-m laptop-image">
+          <img src="./images/laptop1.png" alt="Web Development image">
+        </div>
+      </div>
+      
+    </section>
+
+    <!-- <section>create close btn for sign in section</section> -->
   </body>
 </html>
